init types and swagger
