# pkg/swagger.yaml
@@ -148,6 +148,79 @@ paths:
                                         jsonrpc:
                                             type: string
                                             example: "2.0"
+    /api/v1/udp/serverSettings/getDeletedRooms:
+        post:
+            tags:
+                - ServerSettings
+            summary: SetNotifyServer
+            parameters:
+                - in: header
+                  name: Token
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                id:
+                                    example: 1
+                                    oneOf:
+                                        - type: number
+                                        - type: string
+                                          format: uuid
+                                jsonrpc:
+                                    type: string
+                                    example: "2.0"
+                                params:
+                                    $ref: '#/components/schemas/requestServerSettingsGetDeletedRooms'
+            responses:
+                "200":
+                    description: Successful operation
+                    content:
+                        application/json:
+                            schema:
+                                oneOf:
+                                    - type: object
+                                      properties:
+                                        id:
+                                            example: 1
+                                            oneOf:
+                                                - type: number
+                                                - type: string
+                                                  format: uuid
+                                        jsonrpc:
+                                            type: string
+                                            example: "2.0"
+                                        result:
+                                            $ref: '#/components/schemas/responseServerSettingsGetDeletedRooms'
+                                    - type: object
+                                      properties:
+                                        error:
+                                            type: object
+                                            properties:
+                                                code:
+                                                    type: number
+                                                    format: int32
+                                                    example: -32603
+                                                data:
+                                                    type: object
+                                                    nullable: true
+                                                message:
+                                                    type: string
+                                                    example: not found
+                                            nullable: true
+                                        id:
+                                            example: 1
+                                            oneOf:
+                                                - type: number
+                                                - type: string
+                                                  format: uuid
+                                        jsonrpc:
+                                            type: string
+                                            example: "2.0"
     /api/v1/udp/serverSettings/getServerSettings:
         post:
             tags:
@@ -294,79 +367,6 @@ paths:
                                         jsonrpc:
                                             type: string
                                             example: "2.0"
-    /api/v1/udp/serverSettings/setNotifyServer:
-        post:
-            tags:
-                - ServerSettings
-            summary: SetNotifyServer
-            parameters:
-                - in: header
-                  name: Token
-                  required: true
-                  schema:
-                    type: string
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                id:
-                                    example: 1
-                                    oneOf:
-                                        - type: number
-                                        - type: string
-                                          format: uuid
-                                jsonrpc:
-                                    type: string
-                                    example: "2.0"
-                                params:
-                                    $ref: '#/components/schemas/requestServerSettingsSetNotifyServer'
-            responses:
-                "200":
-                    description: Successful operation
-                    content:
-                        application/json:
-                            schema:
-                                oneOf:
-                                    - type: object
-                                      properties:
-                                        id:
-                                            example: 1
-                                            oneOf:
-                                                - type: number
-                                                - type: string
-                                                  format: uuid
-                                        jsonrpc:
-                                            type: string
-                                            example: "2.0"
-                                        result:
-                                            $ref: '#/components/schemas/responseServerSettingsSetNotifyServer'
-                                    - type: object
-                                      properties:
-                                        error:
-                                            type: object
-                                            properties:
-                                                code:
-                                                    type: number
-                                                    format: int32
-                                                    example: -32603
-                                                data:
-                                                    type: object
-                                                    nullable: true
-                                                message:
-                                                    type: string
-                                                    example: not found
-                                            nullable: true
-                                        id:
-                                            example: 1
-                                            oneOf:
-                                                - type: number
-                                                - type: string
-                                                  format: uuid
-                                        jsonrpc:
-                                            type: string
-                                            example: "2.0"
 components:
     schemas:
         requestServerSettingsCreateRoom:
@@ -376,18 +376,18 @@ components:
                     $ref: '#/components/schemas/types.CreateRoomRequest'
         requestServerSettingsGetConnectionsNum:
             type: object
+        requestServerSettingsGetDeletedRooms:
+            type: object
+            properties:
+                ids:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/types.GetDeletedRooms'
+                    nullable: true
         requestServerSettingsGetServerSettings:
             type: object
         requestServerSettingsHealthCheck:
             type: object
-        requestServerSettingsSetNotifyServer:
-            type: object
-            properties:
-                id:
-                    type: string
-                    format: uuid
-                url:
-                    type: string
         responseServerSettingsCreateRoom:
             type: object
         responseServerSettingsGetConnectionsNum:
@@ -398,6 +398,14 @@ components:
                     format: int
                 exists:
                     type: boolean
+        responseServerSettingsGetDeletedRooms:
+            type: object
+            properties:
+                deletedIds:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/types.GetDeletedRooms'
+                    nullable: true
         responseServerSettingsGetServerSettings:
             type: object
             properties:
@@ -408,10 +416,21 @@ components:
             properties:
                 exists:
                     type: boolean
-        responseServerSettingsSetNotifyServer:
-            type: object
         types.CreateRoomRequest:
             type: object
+            properties:
+                roomTTl:
+                    type: number
+                    format: int64
+        types.GetDeletedRooms:
+            type: object
+            properties:
+                gameID:
+                    type: string
+                    format: uuid
+                roomID:
+                    type: string
+                    format: uuid
         types.Settings:
             type: object
             properties:
