# pkg/transport/serversettings-exchange.go
@@ -1,10 +1,7 @@
 // GENERATED BY 'T'ransport 'G'enerator. DO NOT EDIT.
 package transport
 
-import (
-	"github.com/ascenmmo/udp-server/pkg/api/types"
-	"github.com/google/uuid"
-)
+import "github.com/ascenmmo/udp-server/pkg/api/types"
 
 type requestServerSettingsGetConnectionsNum struct {
 	Token string `json:"token"`
@@ -39,11 +36,11 @@ type requestServerSettingsCreateRoom struct {
 // Formal exchange type, please do not delete.
 type responseServerSettingsCreateRoom struct{}
 
-type requestServerSettingsSetNotifyServer struct {
-	Token string    `json:"token"`
-	Id    uuid.UUID `json:"id"`
-	Url   string    `json:"url"`
+type requestServerSettingsGetDeletedRooms struct {
+	Token string                  `json:"token"`
+	Ids   []types.GetDeletedRooms `json:"ids"`
 }
 
-// Formal exchange type, please do not delete.
-type responseServerSettingsSetNotifyServer struct{}
+type responseServerSettingsGetDeletedRooms struct {
+	DeletedIds []types.GetDeletedRooms `json:"deletedIds"`
+}
